objects/Community_Service__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <inlineHelpText>What is the primary contact&apos;s email address?</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <inlineHelpText>Who is the primary contact for this project?</inlineHelpText>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <inlineHelpText>What is the primary contact&apos;s phone number?</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Master Student Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Service</relationshipLabel>
        <relationshipName>Community_Service</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Service__c</fullName>
        <label>Location of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <inlineHelpText>What is the name of the organization that facilitated this project?</inlineHelpText>
        <label>Organization Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <inlineHelpText>When did this project end?</inlineHelpText>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Hours_Completed__c</fullName>
        <inlineHelpText>How many hours of community service did the student complete for this project?</inlineHelpText>
        <label>Service Hours Completed</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <inlineHelpText>When did this project begin?</inlineHelpText>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Community Service</relationshipLabel>
        <relationshipName>Community_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Community Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Contact__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Service_End_Date__c</columns>
        <columns>Service_Hours_Completed__c</columns>
        <columns>Service_Start_Date__c</columns>
        <columns>Student__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Non_Negative_Service_Hours</fullName>
        <active>true</active>
        <description>Service Hours Completed must be non-negative.</description>
        <errorConditionFormula>Service_Hours_Completed__c   &lt; 0</errorConditionFormula>
        <errorDisplayField>Service_Hours_Completed__c</errorDisplayField>
        <errorMessage>Service Hours Completed must non-negative.</errorMessage>
    </validationRules>
</CustomObject>