objects/Community_Service__c/validationRules/Non_Negative_Service_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Service_Hours</fullName>
    <active>true</active>
    <description>Service Hours Completed must be non-negative.</description>
    <errorConditionFormula>Service_Hours_Completed__c   &lt; 0</errorConditionFormula>
    <errorDisplayField>Service_Hours_Completed__c</errorDisplayField>
    <errorMessage>Service Hours Completed must non-negative.</errorMessage>
</ValidationRule>