objects/Community_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Email__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Contact_Phone__c</columns>
    <columns>Contact__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Service_End_Date__c</columns>
    <columns>Service_Hours_Completed__c</columns>
    <columns>Service_Start_Date__c</columns>
    <columns>Student__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>